examples/compiler_errors/adversarial/common_dev_mistakes/MissingPublicAccess.flx
// expect: compile_error
// expect-error: E011

import HiddenApi

module MissingPublicAccess {
    fn leak() -> Int {
        HiddenApi.secret()
    }
}
